--- a/index.html
+++ b/index.html
@@ -5,48 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HVA Mini Hackathon 2.0 - Two-Player Trivia Battle Game</title>
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- <link rel="stylesheet" href="./style.css"> -->
-
 </head>
 
 <body>
-    <div class="main-container w-screen h-screen flex flex-col justify-center items-center">
+    <div class="main-container w-screen h-screen flex flex-col sm:justify-center items-center sm:items-center">
         <div class="bg-slate-400 p-4 rounded-lg">
             <h1 id="title" class="text-center text-2xl font-bold md:text-4xl mb-2">Trivia Battle Game</h1>
-        <form class="flex justify-center flex-col items-center" id="player-form" action="./">
-            <input class="border-2 border-black px-2 rounded-lg" type="text" id="player1" placeholder="Enter First Player Name" required>
-            <br>
-            <input class="border-2 border-black px-2 rounded-lg" type="text" id="player2" placeholder="Enter Second Player Name" required>
-            <br>
-            <button class="border-2 border-black px-2 bg-blue-200 rounded-lg" id="form-submit">Submit</button>
-            <hr>
-        </form> 
-        <div id="category-select" class="hidden">
-            <h2 class="text-rose-700 text-2xl font-bold">Select any one of the category for start playing game</h2>
-            <select id="categories" class="rounded-lg">
-                <option value="Choose the category">Choose the category</option>
-                <option value="general_knowledge">General Knowlege</option>
-                <option value="geography" >Geography</option>
-                <option value="science" >Science</option>
-                <option value="society_and_culture">Society and Culture
-                </option>
-                <option value="film_and_tv" >Film and TV</option>
-                <option value="food_and_drink" >Food and Drink</option>
-                <option value="arts_and_culture" >arts and culture</option>
-                <option value="sport_and_leisure">sport and leisure</option>
-                <option value="music">Music</option>
-                <option value="history">History</option>
-            </select>
+            <form class="flex justify-center flex-col items-center" id="player-form" action="./">
+                <input class="border-2 border-black px-2 rounded-lg" type="text" id="player1"
+                    placeholder="Enter First Player Name" required>
+                <br>
+                <input class="border-2 border-black px-2 rounded-lg" type="text" id="player2"
+                    placeholder="Enter Second Player Name" required>
+                <br>
+                <button class="border-2 border-black px-2 bg-blue-200 rounded-lg" id="form-submit">Submit</button>
+                <hr>
+            </form>
+            <div id="category-select" class="hidden">
+                <h2 class="text-rose-700 text-2xl font-bold">Select any one of the category for start playing game</h2>
+                <select id="categories" class="rounded-lg">
+                    <option value="Choose the category">Choose the category</option>
+                    <option value="general_knowledge">General Knowlege</option>
+                    <option value="geography">Geography</option>
+                    <option value="science">Science</option>
+                    <option value="society_and_culture">Society and Culture
+                    </option>
+                    <option value="film_and_tv">Film and TV</option>
+                    <option value="food_and_drink">Food and Drink</option>
+                    <option value="arts_and_culture">arts and culture</option>
+                    <option value="sport_and_leisure">sport and leisure</option>
+                    <option value="music">Music</option>
+                    <option value="history">History</option>
+                </select>
+            </div>
+            <div id="question-container"></div>
         </div>
-        <div id="question-container"></div>
-  
-        </div>
-          </div>
+    </div>
 
 </body>
 <script src="./app.js"></script>
 
 </html>
-
